# mirror

./: .env.example  .gitignore  .lintstagedrc  .prettierignore  2026-04-02-implement-the-following-plan.txt  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLOR_INSERTION_REPORT.md  CONTRIBUTING.md  EDITING_ROBUSTNESS_REPORT.md  IMPROVEMENT_PLAN.md  LICENSE  PANEL_UNIFICATION.md  PLAN-unify-as-keyword.md  README-compiler.md  README.md  SECURITY.md  analyze-functions.cjs  debug-html.ts  deploy.sh  eslint.config.js  improve-1.md  improve-2.md  improve-3.md  improve-final-1.md  improve-final-2.md  improve-final-3.md  index.html  package-lock.json  package.json  playwright.config.ts  test-browser-parsing.ts  test-button-state-render.ts  test-compile.js  test-compile.mjs  test-custom-button.ts  test-dashboard.ts  test-dashboard2.ts  (+32 more)
.github/: pull_request_template.md
.playwright-mcp/: color-picker-open  color-replaced  mirror-project.json  test-3char-color  test-after-delete  test-invalid-color  test-multi-swatches  test-multiple-colors  with-swatch  with-swatch-v2
api/: .htaccess  auth.php  files.php  index.php  projects.php  user-settings.php
assets/: mirror-defaults.css
compiler/: CLEANUP.md  INVENTORY.md  SESSION-HANDOFF.md  cli.ts  index.ts  positional-resolver.ts  preprocessor.ts
coverage/: clover.xml  (+2 more)
mirror-ide/src-tauri/: Cargo.toml  tauri.conf.json
mirror-ide/src-tauri/capabilities/: default.json
mirror-ide/src-tauri/src/: lib.rs  main.rs  menu.rs
mirror-ide/src-tauri/src/commands/: claude_cli.rs  file_system.rs  mod.rs  project.rs
(+5361 files in other folders)
