[package]
name = "mirror-ide"
version = "0.1.0"
description = "Mirror IDE - DSL for rapid UI prototyping"
authors = ["Toni Steimle"]
edition = "2021"

[lib]
name = "mirror_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
uuid = { version = "1", features = ["v4"] }
open = "5"
